<resources>
    <string name="app_name">BarcodeChecker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_history">History</string>
    <string name="item_search">Search</string>
    <string name="item_camera">Scan</string>
    <string name="item_list">List</string>
    <string name="item_user">User</string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="scanner_fragment_activity">ZXing Scanner - Full Fragment Activity</string>
    <string name="simple_scanner_activity">ZXing Scanner - Simple Activity</string>
    <string name="custom_view_finder_scanner_activity">ZXing Scanner - Custom View Finder Activity</string>
    <string name="scaling_scanner_activity">ZXing Scanner - Scaling Activity</string>
    <string name="simple_scanner_fragment_activity">ZXing Scanner - Simple Fragment Activity</string>
    <string name="full_screen_scanner_fragment_activity">ZXing Scanner - Full Screen Fragment Activity</string>
    <string name="simple_activity_sample">Simple Activity Sample</string>
    <string name="simple_fragment_sample">Simple Fragment Sample</string>
    <string name="activity_sample">Full Activity Sample</string>
    <string name="fragment_sample">Full Fragment Sample</string>
    <string name="full_screen_sample">Full Screen Fragment Sample</string>
    <string name="custom_view_finder_sample">Custom View Finder Sample</string>
    <string name="scaling_sample">Scaling Sample</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <bool name="cameraPreviewShouldFillView">true</bool>

    <string name="lbl_code">Mã sản phẩm:</string>
    <string name="lbl_name">Tên sản phẩm:</string>
    <string name="lbl_price">Giá sản phẩm</string>
    <string name="lbl_company">Công ty:</string>
    <string name="lbl_contact">Liên hệ:</string>
    <string name="lbl_description">Mô tả:</string>
    <string name="lbl_comment">Xem bình luận:</string>
    <string name="lbl_rating">Đánh giá (0)</string>
    <string name="lbl_addresss">Địa chỉ:</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_category">Loại:</string>

    <!--Login-->
    <string name="hint_username">Tài khoản</string>
    <string name="hint_name">Tên</string>
    <string name="hint_address">Địa Chỉ</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_email">Thư điện tử</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_password_retype">Nhập lại mật khẩu</string>
    <string name="button_login">Đăng nhập</string>
    <string name="link_register">Bạn chưa có tài khoản? Đăng kí ngay.</string>
    <string name="link_login">Bạn đã có tài khoản? Đăng nhập.</string>
    <string name="button_register">Đăng ký</string>


    <!--History-->
    <string name="string_not_fount">Không Tìm Thấy</string>
    <string name="not_found_product_dialog_title">Thông báo</string>
    <string name="not_found_product_dialog_message">Sản phẩm không tìm thấy</string>
    <string name="not_found_product_dialog_tag">not_foud_dialog</string>
    <string name="delete_history_dialog_title">Xóa</string>
    <string name="delete_history_dialog_message">Bạn có chắc muốn xóa lịch sử này?</string>
    <string name="delete_history_dialog_tag">confirm_delete</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_accout">AccoutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <!--AccoutFragment-->
    <string name="confirm_log_out_message">Bạn có chắc muốn đăng xuất?</string>
    <string name="password_not_empty_message">Mật khẩu không được để trống</string>
    <string name="password_leng_error">Mật khẩu phải có độ dài không hợp lệ</string>
    <string name="password_not_right">Mật khẩu không đúng</string>
    <string name="password_not_match">Mật khẩu không trùng khớp</string>


    <!--Tab Name-->
    <string name="tab_history">Lịch sử</string>
    <string name="tab_search">Tìm Kiếm</string>
    <string name="tab_scan">Camera</string>
    <string name="tab_category">Danh Sách Sản Phẩm</string>
    <string name="tab_category_list">Danh Sách</string>
    <string name="tab_user">Tài Khoản</string>
    <string name="tab_accout">Chỉnh Sửa Tài Khoản</string>
    <string name="tab_my_product">Sản Phẩm Của Tôi</string>
    <string name="tab_message">Tin Nhắn</string>


</resources>
