<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey_100"
    android:orientation="vertical"
    tools:context="com.project.barcodechecker.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/tool_bar" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/camera"
                    android:backgroundTint="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="BarCode Checker"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="35dp"
                android:paddingRight="35dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/userWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_username_login_atv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:drawableLeft="@drawable/ic_user"
                            android:hint="@string/hint_username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textColorHint="@color/color_grey_400"
                            android:textSize="20dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_password_login_atv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_password"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColorHint="@color/color_grey_400"
                            android:textSize="20dp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nhớ tài khoản"
                        android:textColor="@color/color_grey_600"
                        android:textSize="15dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Quên mật khẩu"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login_lgn_atv"
                    style="@style/button_primary"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/button_login"
                    android:textColor="@color/color_white"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_register_atv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="35dp"
                android:autoLink="web"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:gravity="center_horizontal"
                android:text="@string/link_register" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
