<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_product_detail_atv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_shopping_cart_black_24dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_product_detail_atv"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                style="@style/lbl_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/left_side_detail_atv"
                android:text="@string/lbl_code" />

            <TextView
                android:id="@+id/txt_code_detail_atv"
                style="@style/value_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/right_side_detail_atv"
                android:text="code" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                style="@style/lbl_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/left_side_detail_atv"
                android:text="@string/lbl_name" />

            <TextView
                android:id="@+id/txt_name_detail_atv"
                style="@style/value_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/right_side_detail_atv"
                android:text="name" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                style="@style/lbl_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/left_side_detail_atv"
                android:text="@string/lbl_price" />

            <TextView
                android:id="@+id/txt_price_detail_atv"
                style="@style/value_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/right_side_detail_atv"
                android:text="price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                style="@style/lbl_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/left_side_detail_atv"
                android:text="Loại" />

            <TextView
                android:id="@+id/txt_product_category"
                style="@style/value_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/right_side_detail_atv"
                android:text="Category" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/priceWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_price_sale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_price"
                android:hint="0"
                android:inputType="number"
                android:maxLines="1"
                android:textColorHint="@color/color_grey_500"
                android:textSize="15dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_update_sale"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="Cập nhật"
            android:layout_gravity="center"
            android:textColor="@color/color_white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>